# PythonPackagingTest1

./: README.md  pyproject.toml  setup.cfg  setup.py
src/PythonPackagingTest1SN.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/example/: file.py
