[metadata]
name = PythonPackagingTest1SN
version = attr: PythonPackagingTest1SN.VERSION
author = Sri N S S Nem
author_email = abc@abc.om
description = Sri N S S Nem
long_description = file: README.md
keywords = Sri N S S Nem
license = MIT
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    requests
    importlib-metadata; python_version<"3.8"

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    executable-name = PythonPackagingTest1SN.module:function

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
where = src